# dagster-demo-repo

./: .gitignore
dagster-demo-code/: .gitignore  README.md  README_DEMO.md  pyproject.toml
dagster-demo-code/basics/: pyproject.toml
dagster-demo-code/basics/src/basics/: __deploy.py
dagster-demo-code/basics/src/basics/asset_basics/: __init__.py  asset_checks.py  asset_jobs.py  assets.py
dagster-demo-code/basics/src/basics/asset_partitioning/: __init__.py
dagster-demo-code/basics/src/basics/resources/: __init__.py
dagster-demo-code/basics/tests/basics/asset_basics/: test_asset_silver.py
dagster-demo-code/notebooks/: io_manager.mo.py  nyc.mo.py  resources.mo.py  sb.py  taxi_trips_api.mo.py
dagster-demo-code/nyc/: README.md  pyproject.toml
dagster-demo-code/nyc/src/nyc/: __init__.py  constants.py  partitions.py
dagster-demo-code/nyc/src/nyc/assets/: __init__.py  _manhattan_stats.py  _taxi_trips_raw.py  _taxi_trips_raw_checks.py  _taxi_trips_table.py  _taxi_zones_raw.py  _taxi_zones_table.py
dagster-depl-docker/: docker-compose.yaml
dagster-depl-docker/00-docs/: README_000_CONFIGURATION_DAGSTER_INSTANCE.md  README_001_CONF_CODE_LOCATIONS.md  README_015_CONCURRENCY_PRIORITY.md  README_020_DEV.md  README_900_GLOSSARY.md  README_999_TODOs.md  dagster_archi.drawio
dagster-depl-docker/dagster-manager/: Dockerfile  README.md  dagster.yaml  pyproject.toml  workspace.yaml
dagster-depl-docker/demo-code-location/: Dockerfile  README.md  pyproject.toml
dagster-depl-docker/demo-code-location/src/demo_code_location/: __init__.py
