[project]
name = "dagster-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "nyc",
    "basics"
]

[dependency-groups]
dev = [
    "altair>=5.5.0",
    "dagster-webserver>=1.10.2",
    "marimo[sql]>=0.11.9",
    "polars>=1.23.0",
    "pytest>=8.3.4",
    "ruff>=0.9.7",
]

[tool.uv.sources]
nyc = { workspace = true }
basics = { workspace = true }

[tool.uv.workspace]
members = [
    "nyc",
    "basics",
]

# Each given module is a code location
[tool.dagster]
modules = [
    # { type = "module", name = "nyc" },
    { type = "module", name = "basics.asset_basics" },
    { type = "module", name = "basics.resources" },
    { type = "module", name = "basics.asset_partitioning" },
]

[tool.ruff]
line-length = 100
exclude = ["*.ipynb"]
